# SK24mapper

./: .gitignore  .output.txt  CLAUDE.md  README.md  SK42.spec  SK42_portable.spec  SK42mapper.spec  SK42mapper_portable.spec  check.ps1  check.sh  check_output.txt  helmert_sample.csv  installer.iss  integration_test.ps1  main.py  pr_comment.html  pr_temp.html  pyproject.toml  reproduce_issue.py  test_brightness_slider.py  test_contour_gaps.py  test_contours_overlay.py  test_display_grid_fix.py  test_elevation_legend.py  test_grid_checkbox_improvements.py  test_quality_slider_fix.py  test_quality_slider_signal_blocking.py  test_save_cleanup_fix.py  test_save_crash_fix.py  test_size_estimate_fix.py  test_slider_preservation.py  test_slider_value_fix.py  test_smoothing.py  tests.ps1  tests.sh
.claude/: settings.local.json
.github/.claude/: settings.local.json
.github/workflows/: build-windows-installer.yml  cleanup_artifacts.yml
configs/profiles/: big.toml  bug.toml  default.toml  konsta.toml  persa.toml  test.toml  гранит.toml  гранит2.toml  карта на стену.toml  киев.toml  константиновка.toml  краснодар.toml  москва.toml  новый_профиль.toml  ростов-на-дону.toml  тест_точности.toml
docs/: contours_optimization_plan.md  log.txt  performance_optimization_spec.md  radio_horizon_summary.md  tz-tile-storage.md
scripts/: installer.iss
src/: constants.py  contours.py  contours_labels.py  controller.py  coords_sk42.py  diagnostics.py  domen.py  elevation_provider.py  geometry.py  helmert_sample.csv  http_client.py  image.py  image_io.py  main.py  main_mvc.py  model.py  mvc_controller.py  mvc_model.py  mvc_view.py  preview.py  preview_window.py  profiles.py  profiles.py.broken  progress.py  radio_horizon.py  service.py  service.py.backup  settings.py  status_bar_proxy.py  temp_load_profile.txt  topography.py
src/contours/: __init__.py  adaptive.py  builder.py  helpers.py  labels.py  labels_overlay.py  seeds.py
src/dem/: __init__.py  builder.py
src/domain/: __init__.py  models.py  profiles.py  toml_sections.py
src/elevation/: __init__.py  dem_builder.py  provider.py  stats.py
src/geo/: __init__.py  coords_sk42.py  topography.py
src/gui/: __init__.py  app.py  controller.py  helmert_tool.py  help_dialog.py  matrix_rain.py  model.py  preview.py  preview_window.py  status_bar.py  theme.py  view.py  view.py.backup
src/gui/docs/: 01_getting_started.md  02_map_types.md  03_coordinates.md  04_radio_horizon.md  05_link_profile.md  06_advanced.md  style.css
src/gui/widgets/: __init__.py  coordinate_input.py  grid_settings.py  helmert_settings.py  modal_overlay.py  output_settings.py
src/gui/workers/: __init__.py  (+2 more)
src/imaging/: __init__.py  composer.py  grid.py  grid_streaming.py  io.py  legend.py  pyramid.py  streaming.py  text.py  transforms.py
src/infrastructure/: __init__.py
src/render/: __init__.py  compose.py  contours_builder.py  map_renderer.py
src/services/: __init__.py  color_utils.py  coordinate_transformer.py  dem_colorizer.py  drawing_utils.py  map_context.py  map_download_service.py  map_job.py  map_postprocessing.py  overlay_utils.py  radar_coverage.py  radio_horizon.py  settings_service.py  tile_coverage.py  tile_fetcher.py
src/shared/: __init__.py  constants.py  diagnostics.py  memory_estimation.py  portable.py  progress.py
src/tiles/: __init__.py  cache.py  coverage.py  executor.py  fetcher.py  loader.py  writer.py
tests/: conftest.py  test_constants.py  test_contours_builder.py  test_contours_helpers.py  test_contours_labels.py  test_contours_labels_overlay.py  test_coords_sk42.py  test_coords_sk42_extended.py  test_dem_colorizer.py  test_diagnostics.py  test_diagnostics_extended.py  test_domen.py  test_domen_extended.py  test_elevation_provider.py  test_elevation_provider_extended.py  test_geometry.py  test_geometry_extended.py  test_http_client.py  test_image.py  test_image_extended.py  test_image_io.py  test_misc_extended.py  test_oom_prevention.py  test_preview.py  test_profiles.py  test_profiles_extended.py  test_progress.py  test_radio_horizon.py  test_render_compose.py  test_render_preview.py  test_service_extended.py  test_services.py  test_status_bar_proxy.py  test_tiles_executor.py  test_tiles_extended_2.py  test_tiles_fetcher.py  test_topography.py
tests/contours/: test_adaptive.py  test_helpers.py  test_labels.py  test_module.py  test_seeds.py
tests/dem/: test_dem_builder.py
tests/domain/: test_models.py  test_models_extended.py  test_profiles.py  test_profiles_extended.py  test_toml_sections.py
tests/elevation/: test_elevation_dem_builder.py  test_provider.py  test_provider_extended.py  test_stats.py  test_stats_sampling.py
tests/geo/: test_coords_sk42.py  test_coords_sk42_extended.py  test_geometry_extended.py  test_topography.py
tests/gui/: test_cancel_operation.py  test_final_pos_to_dem_coords.py  test_model.py  test_nsu_bounds.py  test_nsu_reset_overlay.py  test_preview.py  test_recompute_regression.py  test_status_bar_proxy.py
tests/imaging/: test_image.py  test_io.py  test_pyramid.py  test_streaming.py
tests/integration/: conftest.py  test_api_validation.py  test_elevation_color_map.py  test_elevation_contours_map.py  test_elevation_hillshade_map.py  test_link_profile_map.py  test_overlay_contours.py  test_radar_coverage_map.py  test_radio_horizon_map.py  test_satellite_map.py
tests/main/: test_main.py
tests/render/: test_compose.py  test_contours_builder.py  test_map_renderer.py
tests/service/: test_service.py
tests/services/: test_color_utils.py  test_coordinate_transformer.py  test_dem_colorizer.py  test_dem_pipeline_equivalence.py  test_dem_resample_rotation.py  test_map_context.py  test_map_download_service.py  test_map_postprocessing.py  test_overlay_layer_contract.py  test_radar_coverage.py  test_radio_horizon.py  test_rh_cache_contract.py  test_tile_fetcher.py
tests/shared/: test_constants.py  test_diagnostics.py  test_diagnostics_extended.py  test_progress.py
tests/tiles/: test_cache.py  test_coverage.py  test_fetcher.py  test_fetcher_offline.py  test_loader.py  test_writer.py
(+22 files in other folders)
